src/test/deca/context/valid/plus_floatvar_floatvar_plus_float_context.deca
// Description : 
// 
//      Test contextuellement correct de la somme d'une variable float et d'un float
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    float x=3.5;
    float y= x+3.5;
}