src/test/deca/context/invalid/blt_string_blt_int.deca
// Description :
// 
//      Test syntaxiquement correct de "Bonjour"<3
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = "Bonjour"<3;
}

